--- a/src/styles/pages/ads-list.scss
+++ b/src/styles/pages/ads-list.scss
@@ -35,6 +35,15 @@
         }
     }
 
+    .more-ads {
+        display: block;
+        margin-top: 8px;
+        margin-bottom: 80px;
+        @media (max-width: $media-sm){
+            padding: 18px;
+        }
+    }
+
 
     .main-header {
         position: relative;
