--- a/src/styles/base/_buttons.scss
+++ b/src/styles/base/_buttons.scss
@@ -7,6 +7,7 @@
     border-radius: 5px;
     font-size: rem(16);
     line-height: 1.25;
+    display: inline-block;
 
     &:active {
         transform: scale(.96);
