--- a/src/styles/pages/ps-main.scss
+++ b/src/styles/pages/ps-main.scss
@@ -5,3 +5,46 @@
         margin-bottom: 40px;
     }
 }
+
+
+.ps-links{
+    margin-bottom: 64px;
+
+    &__item {
+        display: flex;
+        flex-direction: column;
+        &-img {
+            width: 100%;
+            position: relative;
+            display: block;
+            padding-bottom: percentage(200px/352px);
+            border-radius: 5px 5px 0 0 ;
+            overflow: hidden;
+
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                display: block;
+                top: 0;
+                left: 0;
+                @include object-fit(cover, center);
+            }
+        }
+
+        &-name {
+            padding: 17px 20px 20px;
+            border-radius: 0 0 5px 5px;
+            border: 1px solid $border-10;
+            background-color: $white;
+            font-size: rem(20);
+            font-weight:$font-weight-bold;
+            line-height: 1.2;
+            color: $text-black;
+        }
+
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
