--- a/src/templates/pages/ads-list.html
+++ b/src/templates/pages/ads-list.html
@@ -189,6 +189,12 @@
                 </a>
             </div>
         </div>
+
+        <div class="row justify-content-center">
+            <div class="col-lg-4">
+                <a href="#0" class="btn btn--dark more-ads">Показать еще</a>
+            </div>
+        </div>
     </div>
 
 {% include 'ads-modals-add/ads-modals-add.html' %}
